--- a/style.css
+++ b/style.css
@@ -2,30 +2,32 @@ body{
     padding: 0%;
     margin: 0%;
     font-family:Verdana, Geneva, Tahoma, sans-serif;
-    font-size: 16px;
+    font-size: 14px;
 }
 .container{
     width: 80%;
     margin: 0px auto;
-    display:flex;
+}
+.display-flex{
+    display: flex;
 }
 .half-width{
     width: 50%;
 }
 .header-text{
-    font-size: 35px;
+    font-size: 31px;
     font-family: 'PT Serif', serif;
-    margin-top: 150px;
+    margin-top: 100px;
     display: flex;
 
 }
 .border{
     width: 4px;
-    height: 110px;
+    height: 95px;
     border-radius: 4px;
     background-color:#ff5959;
     margin-right: 10px;
-    margin-top: 18px;
+    margin-top: 15px;
 }
 .header-text h1{
     margin:0px;
@@ -54,9 +56,10 @@ body{
 
 }
 .header-image{
-    width: 65%;
+    width: 100%;
     display: block;
     margin: 0px auto;
+    margin-top: 25px;
 }
 /*Mission css*/
 .mission-heading-text{
@@ -67,8 +70,7 @@ body{
 }
 .mission-box{
     width: 33.33%;
-    margin: 20px;
-    background-color:olive;
+    margin-right:20px;
     border-radius: 15px;
     padding: 20px 20px;
     
@@ -80,7 +82,6 @@ body{
     font-size: 13px;
     color:#656565;
 }
-
 .box-bg-1{
     background-color: #edf5f6;
 }
@@ -91,4 +92,135 @@ body{
 .box-bg-3{
 background-color: #fff4d6;
 }
+.box-bg-4{
+background-color: #f5f4f1;
+}
+/*Develope without limit section*/
+.section-padding{
+    padding-top: 80px;
+}
+.item-box-1{
+    width: 10%;
+    position: relative;
+}
+.item-box-img-1{
+    width: 120%;
+    position: absolute;
+    right:-100px;
+    top:40px;
+    z-index: -1;
+}
+.item-box-img-2{
+    width: 70%;
+    position: absolute;
+    left:0px;
+    bottom:-60px;
+}
+.item-box-2{
+    width: 30%;
 
+}
+.item-box-2 img{
+    width: 90%;
+
+}
+.item-box-3{
+    width: 50%;
+    padding-top: 10px;
+
+}
+.item-box-3 h1{
+    color:#333333;
+    font-size: 30px;
+}
+.item-box-4{
+    width: 10%;
+    position: relative;
+}
+.item-box-4 img{
+    width: 70%;
+    position:absolute;
+    top:-130px;
+    right:0px;
+
+}
+/*global community css*/
+.global-content-1{
+    width: 65%;
+    margin-right: 20px;
+    padding-top: 60px;
+}
+.global-content-1 h1{
+    color:#333333;
+    font-size: 30px;
+}
+.global-content-2{
+    width: 35%;
+    position: relative;
+}
+.global-content-img{
+    width: 100%;
+}
+.global-shape-img{
+    width: 50%;
+position: absolute;
+bottom:-50px;
+right: -70px;
+z-index: -1;
+}
+/*service css*/
+.service-bg{
+    background-image: url(images/bg-image/bg14.png);
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center;
+}
+.service-content-1{
+    width: 60%;
+}
+.service-content-item{
+    width:80%;
+    margin: 10px;
+    border-radius: 4px;
+    padding: 20px;
+
+}
+.service-content-item img{
+    width: 20%;
+}
+.service-content-item p{
+    font-size: 14px;
+    text-align: justify;
+}
+.service-content-2{
+    width: 40%;
+    margin-left: 20px;
+}
+.service-heading-text{
+    font-size: 48px;
+    padding-top: 130px;
+    font-weight: 900;
+    padding-bottom: 20px;
+}
+
+/*footer css*/
+footer{
+    background-color: black;
+    text-align: center;
+    padding: 20px;
+    margin-top: 40px;
+}
+.footer-heading-text{
+    color:white;
+    font-style: italic;
+    font-weight:bold;
+    font-family: 'Lobster Two', cursive;
+
+}
+.footer-heading-subtext-color{
+    color:#ff5959;
+}
+.footer-sub-text{
+    color:darkgray;
+    font-size: 14px;
+}
